--- a/file/Web/HTML/03_Position/1.html
+++ b/file/Web/HTML/03_Position/1.html
@@ -21,15 +21,15 @@
         }
 
         h1 {
-            padding: 0px 30px;
+            padding: 0 30px;
         }
 
         h2 {
-            padding: 0px 30px;
+            padding: 0 30px;
         }
         
         h3 {
-            padding: 0px 30px;
+            padding: 0 30px;
         }
     </style>
 </head>
